--- a/src/styles/Menu.scss
+++ b/src/styles/Menu.scss
@@ -8,7 +8,7 @@
 	padding: 20px 20px 0 20px;
 	position: absolute; // esta es para menu se desancle ya que aparec feo cuando le damos clin al botton creado
 	top: 60px; // tambie ayuda a cambiar el menu
-	right: 50px; // tambien ayuda a cambir el menu
+	right: 50px; // tambien ayuda a cambir el menu de su posicion
 }
 .Menu ul {
 	list-style: none;
