creado api que aparezca varias imagenes

--- a/src/styles/Menu.scss
+++ b/src/styles/Menu.scss
@@ -6,9 +6,9 @@
 	border: 1px solid var(--very-light-pink);
 	border-radius: 6px;
 	padding: 20px 20px 0 20px;
-	position: absolute; // esta es para menu se desancle ya que aparec feo cuando le damos clin al botton creado
-	top: 60px; // tambie ayuda a cambiar el menu
-	right: 50px; // tambien ayuda a cambir el menu de su posicion
+	position: absolute;
+	top: 60px;
+	right: 50px;
 }
 .Menu ul {
 	list-style: none;
