--- a/src/styles/MyOrder.scss
+++ b/src/styles/MyOrder.scss
@@ -8,8 +8,9 @@
 	right: 0;
 	background-color: white;
 	top: 60px;
+	bottom: 0;
 	border-radius: 6px;
-	border:  1px solid var(--very-light-pink);
+	border: 1px solid var(--very-light-pink);
 }
 .title-container {
 	display: flex;
